kubernetes/minikube-grrf-service-clusterip.yaml
kind: Service
apiVersion: v1
metadata:
  name: guardian-grrf
  namespace: default
  labels:
    app: guardian-grrf
spec:
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
  selector:
    app: guardian-grrf
  type: ClusterIP
  sessionAffinity: None
