kubernetes/minikube-grrf-ingress-ambassador.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: ambassador
  name: guardian-grrf-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: guardian-grrf
          servicePort: 8888
